<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/llTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_minus" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:padding="8dp"
        android:id="@+id/llTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/llButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto">

        <androidx.appcompat.widget.AppCompatTextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuvettes"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingEnd="4dp"

            tools:ignore="RtlSymmetry" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCuvettes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2"
            android:textSize="18sp"
            android:textColor="@color/black"

            />
        <androidx.appcompat.widget.AppCompatTextView

            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eggs"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"

            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEggs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="60"
            android:textSize="18sp"
            android:textColor="@color/black"

            />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/background_button"
            android:contentDescription="@string/take_a_picture"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnChosser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/background_button"
            android:contentDescription="@string/galery"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/background_button"
            android:contentDescription="@string/history"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />



        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_button"
            android:contentDescription="@string/information"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
            app:srcCompat="@android:drawable/ic_menu_info_details" />



    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>